test/spec_vectors/simd_align/ok/module_37.wat
(module (memory 1) (func (drop (v128.load32_splat align=1 (i32.const 0)))))