test/spec_vectors/simd_align/fail/module_54.wat
(module (memory 1) (func (result v128) (v128.load32_splat align=8 (i32.const 0))))